# film_shot_classifier

./: .gitignore  CMakeLists.txt  README.md  README_CMAKE.txt
csv_output/: output_video.csv  output_video_marvel.csv  output_video_marvel15.csv  output_video_marvel30.csv  output_video_marvel30_10.csv  output_video_marvel3_opt30.csv  output_video_marvel5.csv  output_video_marvel_opt30_25.csv  output_video_marvel_opt50_60.csv
html/: _file_loader_8hpp_source.html  _film_statistic_eval_8hpp_source.html  _haar_detector_8hpp_source.html  _result_displayer_8hpp_source.html  _scene_change_detect_8hpp_source.html  _shot_classifier_8hpp_source.html  _shot_evaluator_8hpp_source.html  _test_dataset_eval_8hpp_source.html  _user_structs_8hpp_source.html  annotated.html  annotated_dup.js  class_film_statistics-members.html  class_film_statistics.html  class_film_statistics.js  class_haar_detector-members.html  class_haar_detector.html  class_haar_detector.js  class_image_loader-members.html  class_image_loader.html  class_input_source.html  class_preprocessing-members.html  class_preprocessing.html  class_preprocessing.js  class_result_displayer-members.html  class_result_displayer.html  class_shot_classifier-members.html  class_shot_classifier.html  class_shot_evaluator-members.html  class_shot_evaluator.html  class_test_dataset_eval-members.html  class_test_dataset_eval.html  class_test_dataset_eval.js  class_video_loader-members.html  class_video_loader.html  class_video_loader.js  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  (+9 more)
include/: FeatureDetector.hpp  FileLoader.hpp  FilmStatisticEval.hpp  HaarDetector.hpp  ResultDisplayer.hpp  SceneChangeDetect.hpp  SceneChangeDetector.hpp  ShotClassifier.hpp  ShotEvaluator.cpp  ShotEvaluator.hpp  TestDatasetEval.hpp  UserStructs.hpp  sceneChangeDetector.hpp
(+106 files in other folders)
